# mantle

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Fixing Agent Trace Issues.md  Makefile  README.md  copilot-instructions.md  debug_parse.py  docker-compose.yml  ebpf_capture.py  mitm_capture.py  pyproject.toml  report_generator.py  requirements.runtime.txt  run_interactive_intercepted.sh  run_intercepted_agent.sh  run_intercepted_codex.sh  run_traced_agent.sh  strace(1) - Linux manual page.html  test_graph.py  test_time.py
.github/: copilot-instructions.md
.github/prompts/: bug.md
.mantle/: intercept.decisions.jsonl  intercept.yaml
.mantle/intercept.decision-current/: codex_20260406_014502.ebpf.jsonl.json
_agent/workflows/: add-feature.md  fix-bug.md  test-before-ship.md
agent_setup/: setup.yml
docker/: entrypoint.sh
docs/: app.js
mantle/: __init__.py  ebpf_capture.py  errors.py  mitm_capture.py  taint_checks.py  taint_engine.py  taint_models.py  taint_rules.py
mantle/analysis/: __init__.py  llm_parser.py  replay.py
mantle/capture/: RUST_PORT.md  __init__.py  interfaces.py
mantle/capture/rust/: Cargo.toml
mantle/capture/rust/capture-ebpf/: Cargo.toml
mantle/capture/rust/capture-ebpf/src/: main.rs
mantle/capture/rust/capture-userspace/: Cargo.toml
mantle/capture/rust/capture-userspace/src/: lib.rs
mantle/capture/rust/scripts/: build_capture_rust.sh  test_capture_rust.sh
mantle/cli/: README.md  __init__.py  disclosure.py  interactive.py  main.py  pager.py  routes.py  store.py
mantle/dashboard/: README.md  app.py  config.py  llm_utils.py  logging_utils.py  replay_trace.py  requirements.txt  store.py  syscall_utils.py
mantle/ingest/: __init__.py  config.py  store.py
mantle/interfaces/: __init__.py  capture.py  llm_parser.py  trace_store.py
mantle/server/: __init__.py  app.py  logging.py
mantle_agent/: agent_observability.py  cli_agent.py
observability_dashboard/: README.md  app.py
observability_dashboard/static/: app.js  index.html
scripts/: bootstrap_ubuntu.sh  check_architecture.py  install_mantle.sh  install_rtrace.sh
scripts/agent_setup/: codex_setup.sh  run_setup_scripts.sh
simple_agent/: agent_observability.py  agent_tracing_policy.yaml  cli_agent.py
site/: README.md  index.html  styles.css
strace_scenarios/: README.md
strace_scenarios/sys_admin_test/: README.md  cleanup.sh
test_prompts/: taint_test.txt
tests/: conftest.py
tests/e2e/: test_dashboard_ui.py  test_full_trace_pipeline.py
tests/integration/: test_dashboard_api.py  test_trace_store.py
tests/unit/: test_ebpf_event_parsing.py  test_llm_utils.py  test_replay_trace.py  test_syscall_utils.py
trace_scenarios/: README.md
trace_scenarios/blast_radius_test/: README.md  cleanup.sh  generate_valid_keys.sh  prompt.txt  run_all_keys.sh  scenarios.json  setup.sh  verify.sh
trace_scenarios/legacy_log_processor/: api_server.py  create_db.py  prompt.txt  setup.sh  teardown.sh
trace_scenarios/sys_admin_test/: prompt.txt  setup.sh  verify.sh
trace_scenarios/taint_analysis_test/: cleanup.sh  docker-compose.yml  prompt.txt  setup.sh  verify.sh
(+24 files in other folders)
