[workspace]
members = ["capture-userspace", "capture-ebpf"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
aya = { version = "0.13", default-features = false }
aya-log = "0.2"
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "process", "time", "sync", "io-util"] }
